# pdf-chat

./: .gitignore  README.md  main.py  pyproject.toml
app/: application.py  chatllm.py  index.py  knowledgebase.py
config/: config-template.toml
